Fixed overflow on all pages

--- a/source/sass/components/button.scss
+++ b/source/sass/components/button.scss
@@ -4,6 +4,8 @@
   justify-content: center;
   width: 100%;
   min-height: 40px;
+  word-break: break-word;
+  text-align: center;
   font-family: "Oswald", sans-serif;
   font-size: 14px;
   font-weight: 400;
